<resources>
    <string name="app_name">Dice Roller</string>
    <string name="roll">Roll</string>
    <string name="dice_image_description">Dice image</string>
    <string name="icon_menu_description">Closed Menu Icon</string>
    <string name="toolbar_label">%1$s Dice</string>
    <string name="d6_dice_button_text">D6 Dice</string>
    <string name="d4_dice_menu_item">D4 Dice</string>
    <string name="d6_dice_menu_item">D6 Dice</string>
    <string name="d8_dice_menu_item">D8 Dice</string>
    <string name="d10_dice_menu_item">D10 Dice</string>
    <string name="d12_dice_menu_item">D12 Dice</string>
    <string name="d20_dice_menu_item">D20 Dice</string>
    <string name="nav_menu_header_title">Roll it!</string>
    <string name="nav_menu_header_text">The dice app.</string>
    <string name="last_rolls_menu_item">Last Rolls</string>
    <string name="icon_dice_type">icon dice type</string>
    <string name="prompt_roll_die">Come on, roll the %1$s</string>
    <string name="roll_result_message">You got a %1$d</string>
    <string name="history_roll_result_message">You rolled a %1$d</string>
</resources>